--- a/collectors/ioping.plugin/metadata.yaml
+++ b/collectors/ioping.plugin/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: ioping.plugin
 modules:
   - meta:
+      id: collector-ioping.plugin
       plugin_name: ioping.plugin
       module_name: ioping.plugin
       monitored_instance:
