--- a/collectors/charts.d.plugin/ap/metadata.yaml
+++ b/collectors/charts.d.plugin/ap/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: charts.d.plugin
 modules:
   - meta:
+      id: collector-charts.d.plugin-ap
       plugin_name: charts.d.plugin
       module_name: ap
       monitored_instance:
