--- a/collectors/charts.d.plugin/apcupsd/metadata.yaml
+++ b/collectors/charts.d.plugin/apcupsd/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: charts.d.plugin
 modules:
   - meta:
+      id: collector-charts.d.plugin-apcupsd
       plugin_name: charts.d.plugin
       module_name: apcupsd
       monitored_instance:
