--- a/collectors/charts.d.plugin/opensips/metadata.yaml
+++ b/collectors/charts.d.plugin/opensips/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: charts.d.plugin
 modules:
   - meta:
+      id: collector-charts.d.plugin-opensips
       plugin_name: charts.d.plugin
       module_name: opensips
       monitored_instance:
