--- a/collectors/macos.plugin/metadata.yaml
+++ b/collectors/macos.plugin/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: macos.plugin
 modules:
   - meta:
+      id: collector-macos.plugin-mach_smi
       plugin_name: macos.plugin
       module_name: mach_smi
       monitored_instance:
