--- a/collectors/perf.plugin/metadata.yaml
+++ b/collectors/perf.plugin/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: perf.plugin
 modules:
   - meta:
+      id: collector-perf.plugin
       plugin_name: perf.plugin
       module_name: perf.plugin
       monitored_instance:
