--- a/collectors/python.d.plugin/am2320/metadata.yaml
+++ b/collectors/python.d.plugin/am2320/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-am2320
       plugin_name: python.d.plugin
       module_name: am2320
       monitored_instance:
