--- a/collectors/python.d.plugin/ceph/metadata.yaml
+++ b/collectors/python.d.plugin/ceph/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-ceph
       plugin_name: python.d.plugin
       module_name: ceph
       monitored_instance:
