--- a/collectors/python.d.plugin/example/metadata.yaml
+++ b/collectors/python.d.plugin/example/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-example
       plugin_name: python.d.plugin
       module_name: example
       monitored_instance:
