--- a/collectors/python.d.plugin/oracledb/metadata.yaml
+++ b/collectors/python.d.plugin/oracledb/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-oracledb
       plugin_name: python.d.plugin
       module_name: oracledb
       monitored_instance:
