--- a/collectors/python.d.plugin/pandas/metadata.yaml
+++ b/collectors/python.d.plugin/pandas/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-pandas
       plugin_name: python.d.plugin
       module_name: pandas
       monitored_instance:
