--- a/collectors/python.d.plugin/zscores/metadata.yaml
+++ b/collectors/python.d.plugin/zscores/metadata.yaml
@@ -1,6 +1,7 @@
 plugin_name: python.d.plugin
 modules:
   - meta:
+      id: collector-python.d.plugin-zscores
       plugin_name: python.d.plugin
       module_name: zscores
       monitored_instance:
