Update related resourxes to use integration ids directly.

--- a/collectors/diskspace.plugin/metadata.yaml
+++ b/collectors/diskspace.plugin/metadata.yaml
@@ -13,8 +13,7 @@ modules:
       related_resources:
         integrations:
           list:
-            - plugin_name: ebpf.plugin
-              module_name: disk
+            - id: collector-ebpf.plugin-disk
       info_provided_to_referring_integrations:
         description: ""
       keywords:
