Only add flags that are not already in the compiler flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,24 +119,30 @@ option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" Fal
 set(EXTRA_HARDENING_FLAGS "")
 
 if(NOT ${DISABLE_HARDENING})
-        check_c_compiler_flag("-fstack-protector-strong" HAVE_STACK_PROTECTOR_STRONG_FLAG)
-        if(HAVE_STACK_PROTECTOR_STRONG_FLAG)
-                set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-protector-strong")
-        else()
-                check_c_compiler_flag("-fstack-protector" HAVE_STACK_PROTECTOR)
-                if(HAVE_STACK_PROTECTOR)
-                        set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-protector")
+        if(NOT ${CMAKE_C_FLAGS} MATCHES "stack-protector")
+                check_c_compiler_flag("-fstack-protector-strong" HAVE_STACK_PROTECTOR_STRONG_FLAG)
+                if(HAVE_STACK_PROTECTOR_STRONG_FLAG)
+                        set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-protector-strong")
+                else()
+                        check_c_compiler_flag("-fstack-protector" HAVE_STACK_PROTECTOR)
+                        if(HAVE_STACK_PROTECTOR)
+                                set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-protector")
+                        endif()
                 endif()
         endif()
 
-        check_c_compiler_flag("-fstack-clash-protection", HAVE_STACK_CLASH_FLAG)
-        if(HAVE_STACK_CLASH_FLAG)
-            set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-clash-protection")
+        if(NOT ${CMAKE_C_FLAGS} MATCHES "stack-clash-protection")
+                check_c_compiler_flag("-fstack-clash-protection", HAVE_STACK_CLASH_FLAG)
+                if(HAVE_STACK_CLASH_FLAG)
+                        set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fstack-clash-protection")
+                endif()
         endif()
 
-        check_c_compiler_flag("-fcf-protection=full" HAVE_CFI_FLAG)
-        if(HAVE_CFI_FLAG)
-            set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fcf-protection=full")
+        if(NOT ${CMAKE_C_FLAGS} MATCHES "-fcf-protection")
+                check_c_compiler_flag("-fcf-protection=full" HAVE_CFI_FLAG)
+                if(HAVE_CFI_FLAG)
+                        set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -fcf-protection=full")
+                endif()
         endif()
 endif()
 
