Add fortify source options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,18 @@ if(NOT ${DISABLE_HARDENING})
                         set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -mbranch-protection=standard")
                 endif()
         endif()
+
+        if(NOT ${CMAKE_C_FLAGS} MATCHES "_FORTIFY_SOURCE")
+                check_c_compiler_flag("-D_FORTIFY_SOURCE=3" HAVE_FORTIFY_SOURCE_3)
+                if(HAVE_FORTIFY_SOURCE_3)
+                        set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -D_FRTIFY_SOURCE=3")
+                else()
+                        check_c_compiler_flag("-D_FORTIFY_SOURCE=2" HAVE_FORTIFY_SOURCE_2)
+                        if(HAVE_FORTIFY_SOURCE_2)
+                                set(EXTRA_HARDENING_FLAGS "${EXTRA_HARDENING_FLAGS} -D_FRTIFY_SOURCE=2")
+                        endif()
+                endif()
+        endif()
 endif()
 
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${EXTRA_HARDEN_FLAGS}")
