--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -401,9 +401,13 @@ jobs:
       - name: Fetch test environment
         id: fetch
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: ${{ matrix.artifact_key }}-test-env
+          action: actions/download-artifact@v4
+          with: |
+            name: ${{ matrix.artifact_key }}-test-env
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Load test environment
         id: load
         if: needs.file-check.outputs.run == 'true'
@@ -484,10 +488,14 @@ jobs:
       - name: Fetch dist tarball artifacts
         id: fetch-tarball
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: dist-tarball
-          path: dist-tarball
+          action: actions/download-artifact@v4
+          with: |
+            name: dist-tarball
+            path: dist-tarball
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Prepare artifact directory
         id: prepare
         if: needs.file-check.outputs.run == 'true'
@@ -503,9 +511,14 @@ jobs:
       - name: Fetch test environment
         id: fetch-test-environment
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: ${{ matrix.artifact_key }}-test-env
+          action: actions/download-artifact@v4
+          with: |
+            name: ${{ matrix.artifact_key }}-test-env
+            path: .
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Load test environment
         id: load
         if: needs.file-check.outputs.run == 'true'
@@ -565,18 +578,26 @@ jobs:
       - name: Retrieve Dist Tarball
         id: fetch-dist
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: dist-tarball
-          path: dist-tarball
+          action: actions/download-artifact@v4
+          with: |
+            name: dist-tarball
+            path: dist-tarball
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Retrieve Static Build Artifacts
         id: fetch-static
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          pattern: static-archive-*
-          path: static-archive
-          merge-multiple: true
+          action: actions/download-artifact@v4
+          with: |
+            pattern: static-archive-*
+            path: static-archive
+            merge-multiple: true
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Prepare Artifacts
         id: consolidate
         if: needs.file-check.outputs.run == 'true'
@@ -648,10 +669,14 @@ jobs:
       - name: Fetch artifacts
         id: fetch
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: final-artifacts
-          path: artifacts
+          action: actions/download-artifact@v4
+          with: |
+            name: final-artifacts
+            path: artifacts
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Prepare artifacts directory
         id: prepare
         if: needs.file-check.outputs.run == 'true'
@@ -712,10 +737,14 @@ jobs:
       - name: Fetch artifacts
         id: fetch-artifacts
         if: needs.file-check.outputs.run == 'true'
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: final-artifacts
-          path: artifacts
+          action: actions/download-artifact@v4
+          with: |
+            name: final-artifacts
+            path: artifacts
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Prepare artifacts directory
         id: prepare
         if: needs.file-check.outputs.run == 'true'
@@ -761,10 +790,14 @@ jobs:
     steps:
       - name: Retrieve Artifacts
         id: fetch
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: final-artifacts
-          path: final-artifacts
+          action: actions/download-artifact@v4
+          with: |
+            name: final-artifacts
+            path: final-artifacts
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Authenticate to GCS
         id: gcs-auth
         uses: google-github-actions/auth@v2
@@ -826,10 +859,14 @@ jobs:
           token: ${{ secrets.NETDATABOT_GITHUB_TOKEN }}
       - name: Retrieve Artifacts
         id: fetch
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: final-artifacts
-          path: final-artifacts
+          action: actions/download-artifact@v4
+          with: |
+            name: final-artifacts
+            path: final-artifacts
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Prepare version info
         id: version
         run: |
@@ -940,10 +977,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Retrieve Artifacts
         id: fetch
-        uses: actions/download-artifact@v4
+        uses: Wandalen/wretry.action@v1
         with:
-          name: final-artifacts
-          path: final-artifacts
+          action: actions/download-artifact@v4
+          with: |
+            name: final-artifacts
+            path: final-artifacts
+          attempt_limit: 3
+          attempt_delay: 2000
       - name: Create Release
         id: create-release
         uses: ncipollo/release-action@v1
